fix: photo size on mobile

--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -138,8 +138,12 @@
     }
     .photo__container {
       @include flex-row-spaceBetween;
-
       margin: 10px;
+      .photo {
+        width: 100%;
+        object-fit: contain;
+        background: none;
+      }
     }
 
     @include breakpoint(phablet) {
